Update Title Page 2019-05-22

--- a/Title_Page.tex
+++ b/Title_Page.tex
@@ -9,15 +9,15 @@
 \large
 \textbf{SYNOPSIS OF}\\
 \bigskip
-\large{\textbf{Insert Thesis Title Here}}
+\large{\textbf{INSERT THESIS TITLE HERE (ALL CAPITALS)}}
 \\
 \bigskip \bigskip \bigskip \bigskip  
 \large
 \textbf {A THESIS}\\
 \emph{to be submitted by}\\
 \bigskip \bigskip \bigskip \bigskip
-\textbf{Name}\\
-\textbf{(Roll Number)}
+\textbf{NAME IN CAPS}\\
+\textbf{(307116001)} %Roll Number
 \\
 \bigskip \bigskip \bigskip \bigskip
 \emph{for the award of the degree}\\ \bigskip \bigskip
